Goa DSL for lock and unlock policy methods
